# pinyin-wakeword

./: README.md  README_CN.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
examples/: basic_detection.py  with_asr.py
pinyin_wakeword/: __init__.py  config.py  core.py  events.py  matchers.py
tests/: test_config.py  test_core.py  test_integration.py  test_matchers.py
